  (Nicolás Ojeda Bär, review by Gabriel Scherer and Sébastien Hinderer)

- #9498, #9511: make the pattern-matching analyzer more robust to
  or-pattern explosion, by stopping after the first counter-example to
  exhaustivity
  (Gabriel Scherer, review by Luc Maranget, Thomas Refis and Florian Angeletti,
   report by Alex Fedoseev through Hongbo Zhang)

### Build system:

- #9332, #9518, #9529: Cease storing C dependencies in the codebase. C
  dependencies are generated on-the-fly in development mode. For incremental
  compilation, the MSVC ports require GCC to be present.
  (David Allsopp, review by Sébastien Hinderer, YAML-fu by Stephen Dolan)

- #9527: stop including configuration when running 'clean' rules
  to avoid C dependency recomputation.
  (Gabriel Scherer, review by David Allsopp)

### Bug fixes:

- #9521, #9522: correctly fail when comparing functions
  with Closure and Infix tags.
  (Gabriel Scherer and Jeremy Yallop and Xavier Leroy,
   report by Twitter user @st_toHKR through Jun Furuse)

- #9611: maintain order of load path entries in various situations: when passing
  them to system linker, ppx contexts, etc.
  (Nicolás Ojeda Bär, review by Jérémie Dimino and Gabriel Scherer)

OCaml 4.11
----------

(Changes that can break existing programs are marked with a "*")

### Language features

- #8820, #9166: quoted extensions: {%foo|...|} is lighter syntax for
  [%foo {||}], and {%foo bar|...|bar} for [%foo {bar|...|bar}].
  (Gabriel Radanne, Leo White, Gabriel Scherer and Pieter Goetschalckx,
   request by Bikal Lem)

- #6673, #1132, #9617: Relax the handling of explicit polymorphic types
  (Leo White, review by Jacques Garrigue and Gabriel Scherer)

- #9232: allow any class type paths in #-types,
  For instance, "val f: #F(X).t -> unit" is now allowed.
  (Florian Angeletti, review by Gabriel Scherer, suggestion by Leo White)

- #7364, #2188, #9592, #9609: improvement of the unboxability check for types